--- a/azure-pipeline - MediaPicker3.yml
+++ b/azure-pipeline - MediaPicker3.yml
@@ -40,7 +40,7 @@ trigger:
       - bugfix/*
   paths:
     exclude:
-      - README.md
+      - /**/*.md
 
 pr:
   branches:
@@ -48,7 +48,7 @@ pr:
       - master
   paths:
     exclude:
-      - README.md
+      - /**/*.md
 
 stages:
   - stage: Build
@@ -84,8 +84,6 @@ stages:
               platform: 'AnyCPU'
               configuration: 'Release'
               maximumCpuCount: true
-              restoreNugetPackages: true
-
 
           # Pack NuGet
           - task: NuGetCommand@2
@@ -129,7 +127,8 @@ stages:
                     script: |
                       git tag $(projectName)-$(semVersion)
                       git push --tags
-
+                - task: NuGetAuthenticate@0
+                  displayName: 'NuGet Authenticate'
                 - task: NuGetCommand@2
                   displayName: Release on NuGet.org
                   inputs:
@@ -137,3 +136,4 @@ stages:
                     packagesToPush: "$(Pipeline.Workspace)/**/*.nupkg;!$(Pipeline.Workspace)/**/*.symbols.nupkg"
                     nuGetFeedType: external
                     publishFeedCredentials: NuGet.org
+                    allowPackageConflicts: true
