--- a/azure-pipeline - MediaPicker3.yml
+++ b/azure-pipeline - MediaPicker3.yml
@@ -133,7 +133,8 @@ stages:
                   displayName: Release on NuGet.org
                   inputs:
                     command: push
-                    packagesToPush: "$(Pipeline.Workspace)/**/*.nupkg;!$(Pipeline.Workspace)/**/*.symbols.nupkg"
+                    packagesToPush: "$(Pipeline.Workspace)/**/*.nupkg"
                     nuGetFeedType: external
                     publishFeedCredentials: NuGet.org
+                    includeSymbols: false
                     allowPackageConflicts: true
