Update azure-pipeline - MediaPicker3.yml for Azure Pipelines
Ensure that build is only triggered when it's relevant for the plugin

--- a/plugins/Enterspeed.Plugins.UmbracoCms.V8.MediaPicker3/azure-pipeline - MediaPicker3.yml
+++ b/plugins/Enterspeed.Plugins.UmbracoCms.V8.MediaPicker3/azure-pipeline - MediaPicker3.yml
@@ -41,6 +41,8 @@ trigger:
   paths:
     exclude:
       - /**/*.md
+    include:
+      - $(projectFolder)
 
 pr:
   branches:
@@ -49,6 +51,8 @@ pr:
   paths:
     exclude:
       - /**/*.md
+    include:
+      - $(projectFolder)
 
 stages:
   - stage: Build
