--- a/plugins/Enterspeed.Plugins.UmbracoCms.V8.MediaPicker3/azure-pipeline - MediaPicker3.yml
+++ b/plugins/Enterspeed.Plugins.UmbracoCms.V8.MediaPicker3/azure-pipeline - MediaPicker3.yml
@@ -42,7 +42,7 @@ trigger:
     exclude:
       - /**/*.md
     include:
-      - $(projectFolder)/*
+      - plugins/Enterspeed.Plugins.UmbracoCms.V8.SsgDeploy/src
 
 pr:
   branches:
@@ -52,7 +52,7 @@ pr:
     exclude:
       - /**/*.md
     include:
-      - $(projectFolder)/*
+      - plugins/Enterspeed.Plugins.UmbracoCms.V8.SsgDeploy/src
 
 stages:
   - stage: Build
