--- a/plugins/Enterspeed.Plugins.UmbracoCms.V8.MediaPicker3/azure-pipeline - MediaPicker3.yml
+++ b/plugins/Enterspeed.Plugins.UmbracoCms.V8.MediaPicker3/azure-pipeline - MediaPicker3.yml
@@ -7,7 +7,7 @@ variables:
   minorVersion: 1
   patchVersion: 2
 
-  version: $[format('{0}.{1}.{2}-alpha', variables.majorVersion, variables.minorVersion, variables.patchVersion)]
+  version: $[format('{0}.{1}.{2}', variables.majorVersion, variables.minorVersion, variables.patchVersion)]
   ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/master') }}:
     releaseOnNuget: true
     semVersion: $[format('{0}', variables.version)]
